fix: correct formatting and spacing in CSS styles

--- a/style.css
+++ b/style.css
@@ -6,8 +6,7 @@ body {
   overflow: hidden;
   font-family: Roboto, sans-serif;
   display: flex;
-align-items: center;
-justify-content: center;
+  flex-direction: column;
 }
 
 img {
@@ -19,7 +18,16 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
-  padding: 8px 24px;
+  padding: 8px 18px;;
+}
+
+.content{
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 24px;
 }
 
 input {
@@ -34,6 +42,8 @@ ul.right-links {
   padding: 0;
   margin: 0;
   display: flex;
+  justify-content: right;
+  gap: 16px;
 }
 
 
@@ -42,18 +52,27 @@ ul.left-links{
   padding: 0;
   margin: 0;
   display: flex;
+  justify-content: left;
+  gap: 16px;
   
 }
 
 .header a{
   text-decoration: none;
   color: grey;
-  background-color: red;
-  margin-right: 80px;
+  justify-content: space-between;
+  
 }
 
 .footer a {
   text-decoration: none;
   color: grey;
   background-color: #eeeeee;
+  justify-content: space-between;
+}
+.header, .footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16px;
 }
